--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 			.mui-page .mui-table-view:last-child {
 				margin-bottom: 30px;
 			}
-			.mui-table-view {
+/*			.mui-table-view {
 				margin-top: 20px;
-			}
+			}*/
 			.mui-table-view:before{
 				height: 0;
 			}
@@ -145,30 +145,31 @@
 						<a href="#Address"><span class="mui-icon bank-icon-location AddressTxt" id="AddressTxt" data-flag='false'>全国</span></a>
 						<a href="#SearchList"><input type="text" class="bank-activity-txtsearch" readonly="readonly" id="bank-activity-txtsearch" placeholder="请输入商户名" /></a>
 					</div>
-					<div class="bank-type-content">
-						<div class="bank-type-select" id="bank-type-select">
-							<span>全部分类</span>
-							<div class="mui-scroll-wrapper mui-hidden">
-								<div class="mui-scroll">
-									<p data-value='' class="bank-type-item">全部分类</p>
-									<p data-value='1' class="bank-type-item">特色餐饮</p>
-									<p data-value='2' class="bank-type-item">时尚购物</p>
-									<p data-value='3' class="bank-type-item">生活服务</p>
-									<p data-value='4' class="bank-type-item">精品酒店</p>
-									<p data-value='5' class="bank-type-item">休闲娱乐</p>
-									<p data-value='6' class="bank-type-item">运动健身</p>
-									<p data-value='7' class="bank-type-item">美容养生</p>
-									<p data-value='8' class="bank-type-item">母婴亲子</p>
-									<p data-value='9' class="bank-type-item">旅游出行</p>
-									<p data-value='10' class="bank-type-item">家电数码</p>
-									<p data-value='11' class="bank-type-item">教育培训</p>
-								</div>
-							</div>
-						</div>
-				    </div>
+					
 			    </div>
 				<div class="mui-scroll-wrapper" id="pullrefresh">
 					<div class="mui-scroll bank-shop-list">
+						<div class="bank-type-content">
+						<div class="bank-type-select" id="bank-type-select">
+								<span>全部分类</span>
+								<div class="mui-scroll-wrapper mui-hidden">
+									<div class="mui-scroll">
+										<p data-value='' class="bank-type-item">全部分类</p>
+										<p data-value='1' class="bank-type-item">特色餐饮</p>
+										<p data-value='2' class="bank-type-item">时尚购物</p>
+										<p data-value='3' class="bank-type-item">生活服务</p>
+										<p data-value='4' class="bank-type-item">精品酒店</p>
+										<p data-value='5' class="bank-type-item">休闲娱乐</p>
+										<p data-value='6' class="bank-type-item">运动健身</p>
+										<p data-value='7' class="bank-type-item">美容养生</p>
+										<p data-value='8' class="bank-type-item">母婴亲子</p>
+										<p data-value='9' class="bank-type-item">旅游出行</p>
+										<p data-value='10' class="bank-type-item">家电数码</p>
+										<p data-value='11' class="bank-type-item">教育培训</p>
+									</div>
+								</div>
+							</div>
+					    </div>
 						<ul class="mui-table-view">
 							<li class="mui-table-view-cell mui-media" style="font-size: 14px;">
 								数据加载中...
