--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>建行“百城万店”</title>
+		<title>建行信用卡连环特惠</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -234,7 +234,7 @@
 							<li data-tags="热门" class="mui-table-view-cell mui-indexed-list-item mui-bg-f7" id='city-hot-list'>
 								<div class="mui-city">
 									<div class="mui-city-list">
-										<span class="mui-action-back">上海</span>
+										<span>上海</span>
 										<span>昆明</span>
 										<span>石家庄</span>
 										<span>武汉</span>
@@ -273,7 +273,7 @@
 						<div class="mui-scroll-wrapper">
 							<div class="bank-rule-flow mui-scroll">
 								<ul class="mui-table-view bank-rule-content">
-									<li class="mui-table-view-cell  bank-rule-tips">在指定商户刷龙卡信用卡，<i>每笔消费金额100元（含）以内部分，享第一次7折、第二次5折、第三次3折，</i>活动期间连环享受，每天限享1次。</li>
+									<li class="mui-table-view-cell  bank-rule-tips">在列表中的商户使用建行银联标准信用卡（卡号62开头）消费，<i>每笔消费金额100元（含）以内部分，享第一次7折、第二次5折、第三次3折，</i>活动期间连环享受，每天限享1次。</li>
 									<li class="mui-table-view-cell bank-rule-list">连环折优惠，自第一笔消费开始，消费金额100元（含）以内部分可依次享受7折、5折、3折连环优惠，第4次刷卡将重新开始累计。</li>
 									<li class="mui-table-view-cell bank-rule-list">活动期间每客户每天限享受一档连环折1次，每客户在活动期间最多享受18轮连环折优惠。每笔消费金额超出100元的部分，不享受连环折优惠。</li>
 									<li class="mui-table-view-cell bank-rule-list">同一客户以客户在刷卡交易时在POS机上输入的手机号、卡号前6位和卡号后4位作为身份识别，如因持卡人前后更换手机号造成信息无法匹配的，责任由持卡人自负。</li>
@@ -288,7 +288,11 @@
 				</div>
 			<div class="alert-buttons"><span class="alert-button">知道了</span></div>
 		</div>
-			
+		<div class="loading" style="position: fixed; height: 1.5rem;">
+			<span>
+				<img src="img/loading.png" />
+			</span>
+		</div>	
 		<div class="alert-backdrop"></div>
 	</body>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=633ed45aa1cc022ce7b66beb43392d00"></script>
@@ -316,7 +320,6 @@
 		//初始化单页的区域滚动
 		mui('.bank-type-select .mui-scroll-wrapper').scroll();
 		mui('#SearchList .mui-scroll-wrapper').scroll();
-		mui('#alertBox .mui-scroll-wrapper').scroll();
 	    var view = viewApi.view;
 	    (function ($, doc) {
 	        //处理view的后退与webview后退
@@ -377,7 +380,7 @@
 						_html+='<span class="bank-hidden">'+ arrayBuffer[i].MerchantDiscountRate +'<i>折</i></span>';
 					}
 					
-					_html+='<span class="bank-card">建行龙卡</span>';
+					_html+='<span class="bank-card">建行信用卡</span>';
 					_html+='</div>';
 					_html+='</a>';
 					li.innerHTML = _html;
