--- a/index.html
+++ b/index.html
@@ -268,12 +268,13 @@
 		
 		<div id="alertBox" class="alerttips">
 			<div class="alert-inner">
-				<div class="alert-title">活动规则</div>
+				<div class="alert-title">活动内容</div>
 					<div class="alert-text ">
 						<div class="mui-scroll-wrapper">
 							<div class="bank-rule-flow mui-scroll">
 								<ul class="mui-table-view bank-rule-content">
-									<li class="mui-table-view-cell bank-rule-list">在列表中的商户使用建行银联标准信用卡（卡号62开头）消费，<i>每笔消费金额100元（含）以内部分，享第一次7折、第二次5折、第三次3折，</i>活动期间连环享受，每天限享1次。</li>
+									<li class="mui-table-view-cell bank-rule-tips">在列表中的商户使用建行银联标准信用卡（卡号62开头）消费，<i>每笔消费金额100元（含）以内部分，享第一次7折、第二次5折、第三次3折，</i>活动期间连环享受，每天限享1次。</li>
+									<li class="bank-rule-active">活动细则</li>
 									<li class="mui-table-view-cell bank-rule-list">连环折优惠，自第一笔消费开始，消费金额100元（含）以内部分可依次享受7折、5折、3折连环优惠，第4次刷卡将重新开始累计。</li>
 									<li class="mui-table-view-cell bank-rule-list">活动期间每客户每天限享受一档连环折1次，每客户在活动期间最多享受18轮连环折优惠。每笔消费金额超出100元的部分，不享受连环折优惠。</li>
 									<li class="mui-table-view-cell bank-rule-list">同一客户以客户在刷卡交易时在POS机上输入的手机号、卡号前6位和卡号后4位作为身份识别，如因持卡人前后更换手机号造成信息无法匹配的，责任由持卡人自负。</li>
