1、数据更新 2、图片更改 3、链接更改 4、根据数据改动热门城市

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				</div>
 			    <div class="bank-activity-footer">
 			    	<a id="ActivityRule">活动规则</a>
-			    	<a href="http://pp.guangguang.net.cn/ccb_card/choiceCity.php?from=singlemessage&isappinstalled=0">立即申请信用卡</a>
+			    	<a href="http://ccb.uncle-ad.com/card/home?type=up&orgcode=A00000007">立即申请信用卡</a>
 			    </div>
 			</div>
 			<!--页面主内容区结束-->
@@ -234,11 +234,11 @@
 							<li data-tags="热门" class="mui-table-view-cell mui-indexed-list-item mui-bg-f7" id='city-hot-list'>
 								<div class="mui-city">
 									<div class="mui-city-list">
+										<span>北京</span>
 										<span>上海</span>
 										<span>杭州</span>
-										<span>昆明</span>
-										<span>石家庄</span>
-										<span>武汉</span>
+										<span>西安</span>
+										<span>苏州</span>
 										<span>重庆</span>
 
 									</div>
