--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 						<div class="mui-scroll-wrapper">
 							<div class="bank-rule-flow mui-scroll">
 								<ul class="mui-table-view bank-rule-content">
-									<li class="mui-table-view-cell bank-rule-tips">在列表中的商户使用建行银联标准信用卡（卡号62开头）消费，<i>每笔消费金额100元（含）以内部分，享第一次7折、第二次5折、第三次3折，</i>活动期间连环享受，每天限享1次。</li>
+									<li class="mui-table-view-cell bank-rule-tips">活动期间，在指定商户使用龙卡银联标准信用卡（卡号62开头）消费，<i>享商户折扣优惠后，每笔消费金额100元（含）以内部分，享第一次7折、第二次5折、第三次3折的优惠。</i>活动期间连环享受，每天限享一次。活动名额有限，先到先得，抢完即止。</li>
 									<li class="bank-rule-active">活动细则</li>
 									<li class="mui-table-view-cell bank-rule-list">连环折优惠，自第一笔消费开始，消费金额100元（含）以内部分可依次享受7折、5折、3折连环优惠，第4次刷卡将重新开始累计。</li>
 									<li class="mui-table-view-cell bank-rule-list">活动期间每客户每天限享受一档连环折1次，每客户在活动期间最多享受18轮连环折优惠。每笔消费金额超出100元的部分，不享受连环折优惠。</li>
