--- a/setting.html
+++ b/setting.html
@@ -377,7 +377,7 @@
 				var _html='<div class="bank-rule-flow"><div class="bank-rule-content">';	
 				_html +='<p class="bank-rule-tips">活动期间，在指定商户使用龙卡银联标准信用卡（卡号62开头）消费，<i>享商户折扣优惠后，每笔消费金额100元（含）以内部分，享第一次7折、第二次5折、第三次3折的优惠。</i>活动期间连环享受，每天限享一次。活动名额有限，先到先得，抢完即止。</p>';
 				_html +='<p class="bank-rule-list">连环折优惠，自第一笔消费开始，消费金额100元（含）以内部分可依次享受7折、5折、3折连环优惠，第4次刷卡将重新开始累计。</p>';
-				_html +='<p class="bank-rule-list">活动期间每客户每天限享受一档连环折1次，每客户在活动期间最多享受18轮连环折优惠。每笔消费金额超出100元的部分，不享受连环折优惠。</p>';
+				_html +='<p class="bank-rule-list">活动期间每客户每天在活动商户指定门店限享受一档连环折1次，每客户在活动期间最多享受18轮连环折优惠。每笔消费金额超出100元的部分，不享受连环折优惠。除商户本身龙卡信用卡优惠外，本次连环折优惠不与店内其他优惠同享。</p>';
 				_html +='<p class="bank-rule-list">同一客户以客户在刷卡交易时在POS机上输入的手机号、卡号前6位和卡号后4位作为身份识别，如因持卡人前后更换手机号造成信息无法匹配的，责任由持卡人自负。</p>';
 				_html +='<p class="bank-rule-list">有关售货、商品服务等问题执行相关商业法律规定，由持卡人与商户协商解决，建设银行不承担责任。</p>';
 				_html +='<p class="bank-rule-list">持卡人若在活动期间有逾期还款、违反中国建设银行龙卡信用卡章程、领用协议或其他约定条款、或出现账户状态不正常，建行有权取消其参加活动的资格。</p>';
