--- a/setting.html
+++ b/setting.html
@@ -357,6 +357,10 @@
 					_html+= arrayBuffer[i].StoreName;	
 					_html+='<p class="mui-ellipsis bank-icon-location">'+ arrayBuffer[i].MerchantAddress +'</p>';
 					_html+='</div>';
+					_html+='<div class="bank-content-right">';
+					_html+='<span>'+ arrayBuffer[i].MerchantDiscountRate +'<i>折</i></span>';
+					_html+='<span class="bank-card">商户折扣</span>';
+					_html+='</div>';
 					_html+='</a>';
 					li.innerHTML = _html;
 					table.appendChild(li);
@@ -375,7 +379,7 @@
 
 			document.getElementById("ActivityRule").addEventListener('tap', function() {
 				var _html='<div class="bank-rule-flow"><div class="bank-rule-content">';	
-				_html +='<p class="bank-rule-tips">活动期间，在指定商户使用龙卡银联标准信用卡（卡号62开头）消费，<i>享商户折扣优惠后，每笔消费金额100元（含）以内部分，享第一次7折、第二次5折、第三次3折的优惠。</i>活动期间连环享受，每天限享一次。活动名额有限，先到先得，抢完即止。</p>';
+				_html +='<p class="bank-rule-tips">活动期间，在指定商户使用龙卡银联标准信用卡（卡号62开头）消费，<i>享商户折扣优惠后，每笔消费金额100元（含）以内部分，享第一次7折、第二次5折、第三次3折的优惠。</i>活动期间连环享受，每天限享一次。活动名额有限，先到先得，抢完即止。 </p>';
 				_html +='<p class="bank-rule-list">连环折优惠，自第一笔消费开始，消费金额100元（含）以内部分可依次享受7折、5折、3折连环优惠，第4次刷卡将重新开始累计。</p>';
 				_html +='<p class="bank-rule-list">活动期间每客户每天在活动商户指定门店限享受一档连环折1次，每客户在活动期间最多享受18轮连环折优惠。每笔消费金额超出100元的部分，不享受连环折优惠。除商户本身龙卡信用卡优惠外，本次连环折优惠不与店内其他优惠同享。</p>';
 				_html +='<p class="bank-rule-list">同一客户以客户在刷卡交易时在POS机上输入的手机号、卡号前6位和卡号后4位作为身份识别，如因持卡人前后更换手机号造成信息无法匹配的，责任由持卡人自负。</p>';
