--- a/index.html
+++ b/index.html
@@ -269,39 +269,23 @@
 		
 		<div id="alertBox" class="alerttips">
 			<div class="alert-inner">
-				<div class="alert-title">活动内容</div>
-					<div class="alert-text ">
-						<div class="mui-scroll-wrapper">
-							<div class="bank-rule-flow mui-scroll">
-								<ul class="mui-table-view bank-rule-content">
-									<li class="mui-table-view-cell bank-rule-tips">活动期间，在指定商户使用龙卡银联标准信用卡（卡号62开头）消费，
-									<i>享商户折扣优惠后，每笔消费金额100元（含）以内部分，享第一次7折、第二次5折、第三次3折的优惠。</i>
-									活动期间连环享受，每天限享一次。活动名额有限，先到先得，抢完即止。</li>
-									<li class="bank-rule-active">活动细则</li>
-									<li class="mui-table-view-cell bank-rule-list">连环折优惠，自第一笔消费开始，消费金额100元（含）以内部分可依次享受7折、5折、3折连环优惠，第4次刷卡将重新开始累计。</li>
-									<li class="mui-table-view-cell bank-rule-list">活动期间每客户每天在活动商户指定门店限享受一档连环折1次，每客户在活动期间最多享受18轮连环折优惠。每笔消费金额超出100元的部分，不享受连环折优惠。除商户本身龙卡信用卡优惠外，本次连环折优惠不与店内其他优惠同享。</li>
-									<li class="mui-table-view-cell bank-rule-list">同一客户以客户在刷卡交易时在POS机上输入的手机号、卡号前6位和卡号后4位作为身份识别，如因持卡人前后更换手机号造成信息无法匹配的，责任由持卡人自负。</li>
-									<li class="mui-table-view-cell bank-rule-list">有关售货、商品服务等问题执行相关商业法律规定，由持卡人与商户协商解决，建设银行不承担责任。</li>
-									<li class="mui-table-view-cell bank-rule-list">持卡人若在活动期间有逾期还款、违反中国建设银行龙卡信用卡章程、领用协议或其他约定条款、或出现账户状态不正常，建行有权取消其参加活动的资格。</li>
-									<li class="mui-table-view-cell bank-rule-list">对于持卡人存在非真实交易、分单交易等恶意规避活动规则的行为，建设银行有权取消其参加活动的资格，并保留采取相应法律措施的权利。</li>
-									<li class="mui-table-view-cell bank-rule-list">建设银行有权依据法律、法规、规章或业务需要终止或取消此次活动或者修改活动方案，并经相关途径公告后生效。在法律许可范围内，建设银行保留对本活动的解释权。</li>
-								</ul>
-							</div>
-						</div>
-					</div>
+				<div><img src="./img/info.png" style="width: 80px;display: block;margin: 0 auto;"></div>
+				<div style="background: #fff;padding: 20px;padding-top: 50px;margin-top: -35px;">
+					<p style="font-size: 20px;color: #000;font-weight: 400;">尊敬的客户：</p>
+					<p style="text-indent: 40px;font-size: 20px;color: #000;line-height: 50px;">您好！本次"龙卡信用卡百城万店天天惠"
+					<span style="font-size: 26px;color: red;">活动名额已满</span>，感谢参与！</p>
 				</div>
-			<div class="alert-buttons"><span class="alert-button">知道了</span></div>
+			</div>
 		</div>
-		<div class="loading" style="position: fixed; height: 1.5rem;">
+		<!-- <div class="loading" style="position: fixed; height: 1.5rem;">
 			<span>
 				<img src="img/loading.png" />
 			</span>
-		</div>	
+		</div>	 -->
 		<div class="alert-backdrop"></div>
 	</body>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=633ed45aa1cc022ce7b66beb43392d00"></script>
 	<script type="text/javascript" src="js/zepto.js" ></script>
-	<script type="text/javascript" src="js/dataHandle.js" ></script> 
 	<script src="js/mui.min.js "></script>
 	<script type="text/javascript" src="js/rem.js" ></script>
 	<script src="js/mui.view.js "></script>
